Adjust to miles

--- a/local_spaces/templates/index.html
+++ b/local_spaces/templates/index.html
@@ -31,7 +31,7 @@
                     <img id="space-logo" src="https://unsplash.it/64"/>
                 </figure>-->
                 <p id="space-status"></p>
-                <p>Distance: <b id="space-distance"></b> km</p>
+                <p>Distance: <b id="space-distance"></b> miles</p>
             </div>
         </div>
     </template>
